# soundlighter

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
src/: FrequencyToColour.h  Main.cpp  MainComponent.cpp  MainComponent.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h  SpectrumRingBuffer.h  TeensySerialHandler.h
